--- a/Animal_info.html
+++ b/Animal_info.html
@@ -120,21 +120,23 @@ layout: contact_sidebar
       {% include add_explanation.html %}
     </div>
     <div class="js-have-dog-followup d-none">
-      <h5>(if yes to dogs) Do all of the above dogs have current rabies vaccinations?</h5>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios1" value="Yes">
-        <label class="form-check-label" for="dog_rabiesRadios1">
-        Yes
-        </label>
+      <div class="js-dog-rabies-selector">
+        <h5>(if yes to dogs) Do all of the above dogs have current rabies vaccinations?</h5>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios1" value="Yes">
+          <label class="form-check-label" for="dog_rabiesRadios1">
+          Yes
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios2" value="No">
+          <label class="form-check-label" for="dog_rabiesRadios2">
+          No
+          </label>
+        </div>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios2" value="No">
-        <label class="form-check-label" for="dog_rabiesRadios2">
-        No
-        </label>
-      </div>
-      <div>
-        <span>(if no, disclaimer) By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</span>
+      <div class="alert alert-warning d-none js-dog-rabies-alert">
+        <p>(if no, disclaimer) By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
       </div>
       {% include add_explanation.html %}
     </div>
@@ -175,23 +177,23 @@ layout: contact_sidebar
       </div>
       <h5>Your cat's sex</h5>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="Cat_sexRadios" id="Cat_sexRadios1" value="Female">
-          <label class="form-check-label" for="Cat_sexRadios1">
-          Female
-          </label>
+        <input class="form-check-input" type="radio" name="Cat_sexRadios" id="Cat_sexRadios1" value="Female">
+        <label class="form-check-label" for="Cat_sexRadios1">
+        Female
+        </label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="Cat_sexRadios" id="Cat_sexRadios2" value="Male">
-          <label class="form-check-label" for="Cat_sexRadios2">
-          Male
-          </label>
+        <input class="form-check-input" type="radio" name="Cat_sexRadios" id="Cat_sexRadios2" value="Male">
+        <label class="form-check-label" for="Cat_sexRadios2">
+        Male
+        </label>
       </div>
     </div>
     <div class="d-none js-have-cat-followup">
       <a class="btn btn-primary" href="#" role="button">+</a>
       <span>Add another cat</span>
       <small id="add_CatHelpInline" class="text-muted">
-          Optional
+        Optional
       </small>
     </div>
     <div class="d-none js-have-cat-followup">
@@ -203,30 +205,34 @@ layout: contact_sidebar
           </label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="cat_spayedRadios" id="cat_spayedRadios2" value="No">
-          <label class="form-check-label" for="cat_spayedRadios2">
-          No
-          </label>
+        <input class="form-check-input" type="radio" name="cat_spayedRadios" id="cat_spayedRadios2" value="No">
+        <label class="form-check-label" for="cat_spayedRadios2">
+        No
+        </label>
       </div>
       {% include add_explanation.html %}
     </div>
 
     <div class="d-none js-have-cat-followup">
-      <h5>(if yes to cats) Do all of the above cats have current rabies vaccinations?</h5>
-      <div class="form-check">
+      <div class="js-cat-rabies-selector">
+        <h5>(if yes to cats) Do all of the above cats have current rabies vaccinations?</h5>
+        <div class="form-check">
           <input class="form-check-input" type="radio" name="cat_rabiesRadios" id="cat_rabiesRadios1" value="Yes">
           <label class="form-check-label" for="cat_rabiesRadios1">
-          Yes
+            Yes
           </label>
-      </div>
-      <div class="form-check">
+        </div>
+        <div class="form-check">
           <input class="form-check-input" type="radio" name="cat_rabiesRadios" id="cat_rabiesRadios2" value="No">
           <label class="form-check-label" for="cat_rabiesRadios2">
-          No
+            No
           </label>
+        </div>
       </div>
-      <div>
-        <span>(if no, disclaimer) By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</span>
+      <div class="d-none alert alert-warning js-cat-rabies-alert">
+        <p>
+          (if no, disclaimer) By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.
+        </p>
       </div>
       {% include add_explanation.html %}
     </div>
@@ -261,32 +267,34 @@ layout: contact_sidebar
   </div>
 
   <div class="d-none js-have-animals-followup">
+    <div class="js-seperate-animals-selector">
       <h5>(if yes to 1st animal question) Inside your home, are you able to separate your foster animals from your own animals if needed?</h5>
       <small id="separateHelpBlock" class="form-text text-muted">
-          If the foster animal has new vaccinations or becomes ill, they and your animals should be separated for each other's safety and well-being.
+        If the foster animal has new vaccinations or becomes ill, they and your animals should be separated for each other's safety and well-being.
       </small>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios1" value="Yes">
-          <label class="form-check-label" for="separateRadios1">
-          Yes
-          </label>
+        <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios1" value="Yes">
+        <label class="form-check-label" for="separateRadios1">
+        Yes
+        </label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios2" value="No">
-          <label class="form-check-label" for="separateRadios2">
-          No
-          </label>
+        <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios2" value="No">
+        <label class="form-check-label" for="separateRadios2">
+        No
+        </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios3" value="Maybe">
         <label class="form-check-label" for="separateRadios3">
         Maybe
         </label>
-    </div>
-      <div>
-        <span>(If no or maybe, disclaimer) It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
       </div>
-      {% include add_explanation.html %}
+    </div>
+    <div class="d-none alert alert-warning js-seperate-animals-alert">
+      <span>(If no or maybe, disclaimer) It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
+    </div>
+    {% include add_explanation.html %}
   </div>
 
   <a class="btn btn-primary" href="Help_info.html" role="button">Next</a>
