--- a/Home_info.html
+++ b/Home_info.html
@@ -10,7 +10,7 @@ layout: contact_sidebar
 </div>
 <h2>Tell us about your home</h2>
 <form>
-    <div>
+    <div class="js-own-home-selection">
         <h5>Do you own your home?</h5>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="landlordRadios" id="landlordRadios1" value="Yes" checked>
@@ -23,58 +23,48 @@ layout: contact_sidebar
             <label class="form-check-label" for="landlordRadios2">
             No
             </label>
-        </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group">
-        <label for="inputHomeowner">(If no, disclaimer) You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</label>
-        <small id="HomeownerHelpInline" class="text-muted">
-            Optional
-        </small>
-        <input type="text" class="form-control" id="inputHomeowner" placeholder=" " aria-describedby="homeownerHelpBlock">
-      </div>
-    </div>
-    <h5>Are you planning to have your foster animal live indoors?</h5>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios1" value="Yes" checked>
-        <label class="form-check-label" for="can_indoorsRadios1">
-        Yes
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios2" value="No">
-        <label class="form-check-label" for="can_indoorsRadios2">
-        No
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios3" value="Maybe">
-        <label class="form-check-label" for="can_indoorsRadios3">
-        Maybe
-        </label>
-    </div>
-    <div>
-        <!-- If no or maybe for above, include this whole div section -->
-        <h5>(If no or maybe) Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
-        <ul>
-            <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
-            <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
-            <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
-        </ul>
-        <div class="form-row">
-            <div class="form-group">
-                <label for="inputCan_indoors">(if no or maybe) If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</label>
-                <small id="Can_indoorsHelpInline" class="text-muted">
-                    Optional
-                </small>
-                <textarea class="form-control" id="inputCan_indoors" rows="3" ></textarea>
+            <div class="alert alert-warning d-none js-own-home-alert" role="alert">
+                <p>You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</p>
             </div>
         </div>
     </div>
     <div>
         {% include add_explanation.html %}
     </div>
+    <div class="js-indoors-selection">
+        <h5>Are you planning to have your foster animal live indoors?</h5>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios1" value="Yes" checked>
+            <label class="form-check-label" for="can_indoorsRadios1">
+            Yes
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios2" value="No">
+            <label class="form-check-label" for="can_indoorsRadios2">
+            No
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios3" value="Maybe">
+            <label class="form-check-label" for="can_indoorsRadios3">
+            Maybe
+            </label>
+            <div class="alert alert-warning d-none js-indoors-alert" role="alert">
+                <h5>Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
+                <ul>
+                    <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
+                    <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
+                    <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
+                </ul>
+                <p>Before bringing home a foster animal, make sure it can reside indoors. If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</p>
+            </div>
+        </div>
+    </div>
     <div>
+        {% include add_explanation.html %}
+    </div>
+    <div class="js-children">
         <h5>Do any children under 18 living in your home?</h5>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="childrenRadios" id="childrenRadios1" value="Yes" checked>
@@ -89,10 +79,10 @@ layout: contact_sidebar
             </label>
         </div>
     </div>
-    <div class="form-row">
-        <div class="form-group">
-            <label for="inputChildren">(If yes) Please list the ages of all children under 18 living in your home.</label>
-            <textarea class="form-control" id="inputChildren" rows="3" ></textarea>
+    <div class="form-row d-none js-children-followup">
+        <div class="form-group col-md-6">
+          <label for="inputChildren">Please list the ages of all children under 18 living in your home.</label>
+          <input type="text" class="form-control" id="inputChildren" placeholder=" " aria-describedby="ChildrenHelpBlock">
         </div>
     </div>
     <a class="btn btn-primary" href="Animal_info.html" role="button">Next</a>
